ajout class forme

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,10 +30,12 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.ivy-1.2.13.jar=projetsConnexe/ivy-1.2.13.jar
+file.reference.ivy-java.jar=projetsConnexe/ivy-java.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.ivy-1.2.13.jar}
+    ${file.reference.ivy-1.2.13.jar}:\
+    ${file.reference.ivy-java.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
