ajout camera dans le projet

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,13 +29,27 @@ dist.jar=${dist.dir}/Multimodal.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.1.5.2-bin=C:\\Program Files (x86)\\Java\\Java3D\\1.5.2\\bin
 file.reference.ivy-1.2.13.jar=projetsConnexe/ivy-1.2.13.jar
 file.reference.ivy-java.jar=projetsConnexe/ivy-java.jar
+file.reference.j3dcore.jar=C:\\Program Files (x86)\\Java\\Java3D\\1.5.2\\lib\\ext\\j3dcore.jar
+file.reference.j3dutils.jar=C:\\Program Files (x86)\\Java\\Java3D\\1.5.2\\lib\\ext\\j3dutils.jar
+file.reference.jmf.jar=C:\\Program Files (x86)\\JMF2.1.1e\\lib\\jmf.jar
+file.reference.NyARToolkit3.0.0_M2PROIHM_2014_JRE7.jar=NyARToolkit3.0.0_M2PROIHM_2014_JRE7.jar
+file.reference.vecmath.jar=C:\\Program Files (x86)\\Java\\Java3D\\1.5.2\\lib\\ext\\vecmath.jar
+file.reference.Windows-SysWOW64=C:\\Windows\\SysWOW64
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.ivy-1.2.13.jar}:\
-    ${file.reference.ivy-java.jar}
+    ${file.reference.ivy-java.jar}:\
+    ${file.reference.NyARToolkit3.0.0_M2PROIHM_2014_JRE7.jar}:\
+    ${file.reference.1.5.2-bin}:\
+    ${file.reference.j3dcore.jar}:\
+    ${file.reference.j3dutils.jar}:\
+    ${file.reference.vecmath.jar}:\
+    ${file.reference.Windows-SysWOW64}:\
+    ${file.reference.jmf.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -63,7 +77,7 @@ main.class=multimodal.Fusion
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=default_platform
+platform.active=JDK_1.8
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
